[gd_scene load_steps=2 format=1]

[ext_resource path="res://player.gd" type="Script" id=1]

[node name="Panel" type="Panel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="Filter2" type="Control" parent="."]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 10.0
margin/right = 20.0
margin/bottom = 47.0

[node name="Label" type="Label" parent="Filter2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 10.0
margin/right = 67.0
margin/bottom = 24.0
text = "Search in list"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="LineEdit" parent="Filter2"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 96.0
margin/top = 4.0
margin/right = 0.0
margin/bottom = 28.0
placeholder/alpha = 0.6
expand_to_len = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="GameList" type="ItemList" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 55.0
margin/right = 20.0
margin/bottom = 184.0

[node name="FileDialog" type="FileDialog" parent="."]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 113.0
margin/top = 101.0
margin/right = 130.0
margin/bottom = 109.0
popup/exclusive = false
window/title = "保存文件"
dialog/hide_on_ok = false
mode = 4
access = 0
filters = StringArray(  )
show_hidden_files = false

[node name="SelectedInfo" type="HBoxContainer" parent="."]

editor/display_folded = true
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 22.0
margin/top = 181.0
margin/right = 32.0
margin/bottom = 149.0
custom_constants/separation = 10
alignment = 0

[node name="Label" type="Label" parent="SelectedInfo"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 9.0
margin/right = 59.0
margin/bottom = 23.0
text = "Selected:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="SelectedInfo"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 69.0
margin/top = 9.0
margin/right = 69.0
margin/bottom = 23.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Controls" type="HBoxContainer" parent="."]

editor/display_folded = true
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 25.0
margin/top = 143.0
margin/right = 33.0
margin/bottom = 113.0
custom_constants/separation = 15
alignment = 0

[node name="allowzip" type="CheckBox" parent="Controls"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 124.0
margin/bottom = 30.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Allow zip packs"
flat = false
align = 0

[node name="show_collisions" type="CheckBox" parent="Controls"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 139.0
margin/top = 0.0
margin/right = 295.0
margin/bottom = 30.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Show Collisions Hint"
flat = false
align = 0

[node name="show_navigation" type="CheckBox" parent="Controls"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 310.0
margin/top = 0.0
margin/right = 471.0
margin/bottom = 30.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Show Navigation Hint"
flat = false
align = 0

[node name="Buttons" type="HBoxContainer" parent="."]

editor/display_folded = true
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 99.0
margin/right = 20.0
margin/bottom = 10.0
custom_constants/separation = 15
alignment = 1
__meta__ = { "_edit_group_":true }

[node name="scan" type="Button" parent="Buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 236.0
margin/bottom = 89.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Scan"
flat = false

[node name="import" type="Button" parent="Buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 251.0
margin/top = 0.0
margin/right = 487.0
margin/bottom = 89.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Import"
flat = false

[node name="play" type="Button" parent="Buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 502.0
margin/top = 0.0
margin/right = 738.0
margin/bottom = 89.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play"
flat = false

[node name="clear" type="Button" parent="Buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 753.0
margin/top = 0.0
margin/right = 989.0
margin/bottom = 89.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Clear"
flat = false

[node name="exit" type="Button" parent="Buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 1004.0
margin/top = 0.0
margin/right = 1240.0
margin/bottom = 89.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Exit"
flat = false


